--- a/Lectures/P18 - Basic Text Analytics using NLTK.ipynb
+++ b/Lectures/P18 - Basic Text Analytics using NLTK.ipynb
@@ -1148,6 +1148,65 @@
     "\n",
     "Hint: https://medium.com/towards-artificial-intelligence/natural-language-processing-nlp-with-python-tutorial-for-beginners-1f54e610a1a0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import PyPDF2\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import nltk\n",
+    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "from nltk.probability import FreqDist\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "lem = WordNetLemmatizer()\n",
+    "stem = PorterStemmer()\n",
+    "\n",
+    "with open('IntroToFishing_2017_v2.pdf','rb') as pdf_file, open('IntroToFishing_2017_v2.txt', 'w', encoding='utf-8') as text_file:\n",
+    "    read_pdf = PyPDF2.PdfFileReader(pdf_file)\n",
+    "    number_of_pages = read_pdf.getNumPages()\n",
+    "    for page_number in range(number_of_pages):\n",
+    "        page = read_pdf.getPage(page_number)\n",
+    "        page_content = page.extractText()\n",
+    "        text_file.write(page_content)\n",
+    "        \n",
+    "text = open('./IntroToFishing_2017_v2.txt', encoding='utf-8').read()\n",
+    "text = text.replace ('  ',' ')\n",
+    "\n",
+    "sentences = nltk.sent_tokenize(text)\n",
+    "# print(sentences)\n",
+    "\n",
+    "words = word_tokenize(text)\n",
+    "# print(words)\n",
+    "\n",
+    "fdist = FreqDist(words)\n",
+    "# print(fdist.most_common())\n",
+    "\n",
+    "fdist.plot(30,cumulative=False)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "# Without punctuations and stop words\n",
+    "words_no_punc = nltk.wordpunct_tokenize(text)\n",
+    "stop_words=set(stopwords.words(\"english\"))\n",
+    "\n",
+    "for w in words_no_punc:\n",
+    "    if w not in stop_words and w.isalpha():\n",
+    "        words_no_punc.append(w.lower())\n",
+    "print(\"Filtered Words:\", words_no_punc)\n",
+    "\n",
+    "fdist2 = FreqDist(words_no_punc)\n",
+    "# print(fdist.most_common())\n",
+    "\n",
+    "fdist2.plot(30,cumulative=False)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
