--- a/trip_advisor_exercise/Case Study - Webscrapping on Trip Advisor.ipynb
+++ b/trip_advisor_exercise/Case Study - Webscrapping on Trip Advisor.ipynb
@@ -45,12 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
+    "from selenium.common.exceptions import ElementNotInteractableException, NoSuchElementException\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "driver = webdriver.Chrome('C:\\\\Users\\ACER\\Desktop\\ChromeDriver\\chromedriver')"
@@ -58,113 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Comment 1\n",
-      "No refund from Aiaasia for flight cancellation more than 8 months:\n",
-      "\tI booked Airaisa with booking no. T1ZDJV  but cancelled without any reason or explanation,  so I request to refund on 22/10/22, but 8 months passed till now still no refund, it kept saying being processed,  just wondering is it just automatically replied or really being processed???…\n",
-      "\n",
-      "Comment 2\n",
-      "Not good:\n",
-      "\tThere is No food to speak of only the basics which you have to purchase as an extra. There is No alcoholic drinks. The seats are very narrow and I only have a 32 inch waste. Our connecting Flight  from Phuket to Kuala Lumpa was changed from 7.20pm evening to 8.10 in the morning of the same day and we were only given 8 hours notice. They do not have a call centre in any country and the only way you can try to contact them is through there website and they do not answer you still waiting for answers to our emails. Instead of having an hour stop over we had 12 hours plus it took a  hole day off our holiday. The young lady at the airport who was at the Air asia desk could not contact them for us and we still have no Idea why the flight were changed. We were in premium economy which is about the same size and leg room as standard domestic on any other airline. Hope this helps who you choose your  airline. No explanation has been given…\n",
-      "\n",
-      "Comment 3\n",
-      "Don’t use this airline:\n",
-      "\tAll their flights are delayed we have been waiting over 2 hours I haven’t even gotten in the flight and really not happy. They won’t compensate you for delayed flights. \n",
-      "\n",
-      "Comment 4\n",
-      "The staffs are very very rude:\n",
-      "\tRegretted  send my son n nephew tru Airasia flight AK0047.. their crew n staff are not friendly or polite..they very very arrogant n rude.. u can see the vd clip n screen shot frm vd clipi shared..how the staff behavior n treat the passenger. Je just chuck the hand carry largage.. When wanted to check in the largage... if not mistaken the staff sabah lady n we don't how to use the manual system to scan our largage n when we ask her she was very rude n refused to assist us.. anyway we managed to scan .. thus is my first n last taking airasia.. Hope Tony Fernandes CEO of AirAsia look in too the rudely n bad behaviour of his staff..…\n",
-      "\n",
-      "Comment 5\n",
-      "No in-flight entertainment:\n",
-      "\tI am very bored because there is no in-flight entertainment and im going there for 7 hours! All i do is talk with my cousins and brother, it was so boring\n",
-      "\n",
-      "Comment 6\n",
-      "Nicole and dime airline company :\n",
-      "\tBottom of the barrel airline that really runs like the lowest available option. The automatic booking system finds you seats as far as possible from each other, then the airport staff does not accomodate a move together. This is a nickle and dime practice that other budget…\n",
-      "\n",
-      "Comment 7\n",
-      "mr:\n",
-      "\ti had credit account with airasia about $700.00 they clean it up every time i wanted to check my account money all but gone the close the entry the doing maittenice they going from bad to worset\n",
-      "\n",
-      "Comment 8\n",
-      "Great experience, plane needs some refurbishing though. :\n",
-      "\tThe amount of bad reviews here is crazy, and I myself was skeptical before booking due to the reviews. I booked an impromptu flight from Singapore to Penang in June, and the price was okay without baggage or food, but was pricier due to the holidays.  I sat upfront at row 3 in…\n",
-      "\n",
-      "Comment 9\n",
-      "One of the worst customer service:\n",
-      "\tAirAisa rescheduled our flight scheduled to depart from Kota Bharu to KL and from KL to Kuching, this 21st June 2023 resulting in overlapping flight. Despite their assurance on their email that we could change/refund our flight, the process was very difficult. We have to use…\n",
-      "\n",
-      "Comment 10\n",
-      "Terrible Booking Process and Waste of Time:\n",
-      "\tIn this era of online services, AirAsia is bumbling backwards further into the stone ages.  Never mind that searching and choosing options online involve such lags, and any edits result in loss of info, the payment system is horrible and kept declining different cards and…\n",
-      "\n",
-      "Comment 11\n",
-      "AirAsia is a FRAUD:\n",
-      "\tI bought an umbrella for RM35 during my flight (AK642) from KUL to DAD with my credit card. Later I found out that AsiaAsia made duplicate charges to my credit card -- a total of 6 times!  I tried to call AsiaAsia but could not get through to them -- all the numbers are no…\n",
-      "\n",
-      "Comment 12\n",
-      "Air Asia (& Hutchgo Wholeseller)  is Organised Crime, Taking Advantage of Medical Emergency:\n",
-      "\tMy daughter fell and was rushed by ambulance to St. Luke Manila ER the day prior to our trip to Boracay from Manila. Despite their written policy for a Medical No Fit to Fly and IDs confirming family relationship, both Hutchgo (wholeseller) and Air Asia (service provider)…\n",
-      "\n",
-      "Comment 13\n",
-      "Horrendous app navigation that leads to 0 checked in baggage:\n",
-      "\tBefore confirmation, 20kg checked in baggage was available as complimentary. However after booking, NO checked in baggage was available and only 7kg cabin baggage was given. Chat with Elyssa and she informed \"it was a mistake on their side\"!   Asked for a refund and was informed…\n",
-      "\n",
-      "Comment 14\n",
-      "They dont refund and their app or website keep breakdown, cant even book flight under airasia.:\n",
-      "\tHorrible customer service and interface, totally not user friendly and scammer, refused to refund in cash, credit is not usable.\n",
-      "\n",
-      "Comment 15\n",
-      "Booking nightmare:\n",
-      "\tI made a booking then realised the date was wrong when I received the itinerary. I know I entered the correct date. The web site is awful and very user unfriendly. Settings like dates and one-way/return are sometimes lost when you go back to change some details like number of…\n",
-      "\n",
-      "Comment 16\n",
-      "Damaged luggage, dirty broken chair, broken armrest, unhelpful ground and air staff:\n",
-      "\tAir Asia caused a major damage on my luggage. We filled a complaint form in the airport and the ground staff accepted the fact that my luggage had a major damage since it cannot be closed anymore. The ground staff was singing while he checked the suitcase, did not offer any…\n",
-      "\n",
-      "Comment 17\n",
-      "They wont refund:\n",
-      "\tThe worst airline management i ever ecountered. I dnt onow what happened to ky rerund.. they are scammers.. no emaol response.. customer chat is useless.. in short.. terrible airline management\n",
-      "\n",
-      "Comment 18\n",
-      "Worse customer service ever and do not refund after canceling a flight.:\n",
-      "\tI bought an airasia ticket to fly from cebu to boracay in march 2023. In January they sent me a mail to unform me that my flight is canceled and offer few obtions one of them is a refund. I go to there website and ask for a refund. more than 4 months later and still didn't get…\n",
-      "\n",
-      "Comment 19\n",
-      "Worst airline ever:\n",
-      "\tI booked my flights for a certain date but on looking at my ticket they didn't put in the date requested ,  so then they said it would cost me $700 to change the details of the flight , and for everyday I tried to dispute it would cost me more ,  I felt they deliberately messed…\n",
-      "\n",
-      "Comment 20\n",
-      "Only fly with AirAsia if you have no alternative:\n",
-      "\tWe were a party of two travelling from Johor Bahru to Langkawi on May 11th, 2023. The flight tickets were booked and paid for on AirAsia’s web shop AirAsia.com Travel. At the time of booking there were no direct flight from Johor Bahru to Langkawi, so we choose the proposal from…\n",
-      "\n",
-      "Comment 21\n",
-      "I got my money back. SG residents, contact CASE, it refunded my money without a Single-Word.:\n",
-      "\tThose who are struggling with AirAsia and living in Singapore, contact CASE. Once CASE sent an official letter, it refunded money straight away ! The staff at the airport and office are really UNPLEASANT AND REPEATING CAN'T REFUND.   I finally contacted CASE and once a letter…\n",
-      "\n",
-      "Comment 22\n",
-      "Scammers who reschedule and refuse refunds:\n",
-      "\t1. Customer (me) books an AirAsia SIN-CNX flight 2. Days later, AirAsia rescheduled the flight to several hours later. 3. AirAsia sends an email notifying the flight was rescheduled. 4. Submitted a Flight Rescheduled Refund, because the flight was rescheduled 5. Nothing happens…\n",
-      "\n",
-      "Comment 23\n",
-      "Bad experience in Air asia:\n",
-      "\tVery bad experience we the airasia my first trip was from Kuala to langkawi they did not start AC till flight fly and the weather was extremely hot we understand it’s commercial flight but they have to care about their services my second flight was from langkawi to Penang we…\n",
-      "\n",
-      "Comment 24\n",
-      "Must be the worst airline:\n",
-      "\tI’m flying from Kuala Lumpur to Singapore and at the entrance to the immigration, Air Asia staffs weighed my carry on and demanded me to lower my carry on weight to under 7kg. I thought they were the airport staffs and threw what I can throw and wore what I can wear and made it…\n",
-      "\n",
-      "Comment 25\n",
-      "Scam artists!:\n",
-      "\tI think AirAsia is selling fake tickets just to collect a huge amount of money that they then get to use free of cost. I bought a couple of return tickets which got cancelled in March. I am still waiting for the refund. The funny think is these guys left no contact details…\n",
-      "\n"
+     "ename": "NoSuchElementException",
+     "evalue": "Message: no such element: Unable to locate element: {\"method\":\"link text\",\"selector\":\"Read more\"}\n  (Session info: chrome=114.0.5735.199)\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNoSuchElementException\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[53], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m header \u001b[38;5;241m=\u001b[39m soup_list[items]\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m\"\u001b[39m, attrs\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclass\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQwuub\u001b[39m\u001b[38;5;124m\"\u001b[39m})\u001b[38;5;241m.\u001b[39mtext\n\u001b[0;32m     13\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m---> 14\u001b[0m button \u001b[38;5;241m=\u001b[39m \u001b[43mdriver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_element\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mLINK_TEXT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mRead more\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m button\u001b[38;5;241m.\u001b[39mis_displayed() \u001b[38;5;129;01mand\u001b[39;00m button\u001b[38;5;241m.\u001b[39mis_enabled():\n\u001b[0;32m     16\u001b[0m     button\u001b[38;5;241m.\u001b[39mclick()\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\python-dscourse\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:976\u001b[0m, in \u001b[0;36mWebDriver.find_element\u001b[1;34m(self, by, value)\u001b[0m\n\u001b[0;32m    974\u001b[0m         by \u001b[38;5;241m=\u001b[39m By\u001b[38;5;241m.\u001b[39mCSS_SELECTOR\n\u001b[0;32m    975\u001b[0m         value \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[name=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m value\n\u001b[1;32m--> 976\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFIND_ELEMENT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\n\u001b[0;32m    977\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43musing\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mby\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    978\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mvalue\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\python-dscourse\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:321\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    319\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    320\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 321\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    322\u001b[0m     response[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(\n\u001b[0;32m    323\u001b[0m         response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    324\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\python-dscourse\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:242\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    240\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    241\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)\n\u001b[1;32m--> 242\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[1;31mNoSuchElementException\u001b[0m: Message: no such element: Unable to locate element: {\"method\":\"link text\",\"selector\":\"Read more\"}\n  (Session info: chrome=114.0.5735.199)\n"
      ]
     }
    ],
@@ -181,10 +90,16 @@
     "        \n",
     "    for items in range(len(soup_list)):\n",
     "        header = soup_list[items].find(\"a\", attrs={\"class\":\"Qwuub\"}).text\n",
-    "        body = soup_list[items].find(\"div\", attrs={\"class\":\"fIrGe _T\"}).text\n",
-    "        comment = f\"{header}:\\n\\t{body}\"\n",
-    "        comments.append(comment)\n",
-    "        \n",
+    "        time.sleep(5)\n",
+    "        button = driver.find_element(By.LINK_TEXT, \"Read more\")\n",
+    "        if button.is_displayed() and button.is_enabled():\n",
+    "            button.click()\n",
+    "            body = soup_list[items].find('div', attrs={'class':'fIrGe _T'}).text\n",
+    "            comment = f\"{header}:\\n\\t{body}\"\n",
+    "            comments.append(comment)\n",
+    "        else:\n",
+    "            break\n",
+    "            \n",
     "    if page == 1:\n",
     "        driver.find_element(By.XPATH, '//*[@id=\"component_1\"]/div/div[5]/div/div/div/div[2]/div[1]/div[2]/div/div[8]/div/a').click()\n",
     "        time.sleep(5)\n",
