--- a/Exercises/Exercise12.ipynb
+++ b/Exercises/Exercise12.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"../data/nhanes_2015_2016.csv\"\n",
+    "url = \"../data_samples/nhanes_2015_2016.csv\"\n",
     "da = pd.read_csv(url)"
    ]
   },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -114,12 +114,17 @@
        "Name: SMQ020x, Length: 5735, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "da['SMQ020x'] = da['SMQ020']\n",
+    "reset = {1: 'Yes', 2: 'No', 7: None, 9: None}\n",
+    "da = da.replace({'SMQ020x':reset})\n",
+    "da['SMQ020x']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,8 +138,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 73,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -153,12 +160,17 @@
        "Name: RIAGENDRx, Length: 5735, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "da['RIAGENDRx'] = da['RIAGENDR']\n",
+    "reset = {1:'Male', 2:'Female'}\n",
+    "da = da.replace({'RIAGENDRx':reset})\n",
+    "da['RIAGENDRx']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -224,12 +236,15 @@
        "Yes           906  1413"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "dx = da[da['SMQ020x'] != None]\n",
+    "pd.crosstab(dx['SMQ020x'], dx['RIAGENDRx'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -271,27 +286,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>Male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>Male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>Male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>Female</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>Female</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -301,57 +316,62 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5730</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>Female</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5731</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>Male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5732</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>Female</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5733</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>Male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5734</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>Female</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5725 rows × 2 columns</p>\n",
+       "<p>5735 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "      SMQ020x RIAGENDRx\n",
-       "0           1      Male\n",
-       "1           1      Male\n",
-       "2           1      Male\n",
-       "3           0    Female\n",
-       "4           0    Female\n",
+       "0         1.0      Male\n",
+       "1         1.0      Male\n",
+       "2         1.0      Male\n",
+       "3         0.0    Female\n",
+       "4         0.0    Female\n",
        "...       ...       ...\n",
-       "5730        1    Female\n",
-       "5731        0      Male\n",
-       "5732        1    Female\n",
-       "5733        1      Male\n",
-       "5734        0    Female\n",
+       "5730      1.0    Female\n",
+       "5731      0.0      Male\n",
+       "5732      1.0    Female\n",
+       "5733      1.0      Male\n",
+       "5734      0.0    Female\n",
        "\n",
-       "[5725 rows x 2 columns]"
+       "[5735 rows x 2 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "reset = {'Yes':1, 'No':0}\n",
+    "dx = dx.replace({'SMQ020x':reset})\n",
+    "dx = dx[['SMQ020x', 'RIAGENDRx']]\n",
+    "dx"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -362,17 +382,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kuanhoong/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
-      "  \n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -415,12 +427,12 @@
        "    <tr>\n",
        "      <th>Female</th>\n",
        "      <td>0.304845</td>\n",
-       "      <td>2972</td>\n",
+       "      <td>2976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
        "      <td>0.513258</td>\n",
-       "      <td>2753</td>\n",
+       "      <td>2759</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -430,16 +442,19 @@
        "            SMQ020x      \n",
        "               mean  size\n",
        "RIAGENDRx                \n",
-       "Female     0.304845  2972\n",
-       "Male       0.513258  2753"
+       "Female     0.304845  2976\n",
+       "Male       0.513258  2759"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "dz = dx[['SMQ020x', 'RIAGENDRx']].groupby('RIAGENDRx').agg(['mean', 'size'])\n",
+    "dz"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -479,10 +494,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.008438475404634192"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "p = dz['SMQ020x']['mean']['Female']\n",
+    "n = dz['SMQ020x']['size']['Female']\n",
+    "sef = math.sqrt((p*(1-p))/n)\n",
+    "sef"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -493,10 +526,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.009515714829783395"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "p = dz['SMQ020x']['mean']['Male']\n",
+    "n = dz['SMQ020x']['size']['Male']\n",
+    "sem = math.sqrt((p*(1-p))/n)\n",
+    "sem"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -507,10 +558,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.012718360581316123"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dse = math.sqrt(sef**2 + sem**2)\n",
+    "dse"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -521,21 +586,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(-0.23336356545788706, -0.18346243454211297)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1829763204770033 0.23384976280226777\n",
+      "0.012718360581316123\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "ci = dz['SMQ020x']['mean']['Male'] - dz['SMQ020x']['mean']['Female']\n",
+    "x = ci - 2 * dse\n",
+    "y = ci + 2 * dse\n",
+    "print(x,y)\n",
+    "print(dse)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -548,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +631,7 @@
        "Name: BMXBMI, dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -621,32 +690,35 @@
        "      <th>Female</th>\n",
        "      <td>29.939946</td>\n",
        "      <td>7.753319</td>\n",
-       "      <td>2976.0</td>\n",
+       "      <td>2976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
        "      <td>28.778072</td>\n",
        "      <td>6.252568</td>\n",
-       "      <td>2759.0</td>\n",
+       "      <td>2759</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              BMXBMI                  \n",
-       "                mean       std    size\n",
-       "RIAGENDRx                             \n",
-       "Female     29.939946  7.753319  2976.0\n",
-       "Male       28.778072  6.252568  2759.0"
+       "              BMXBMI                \n",
+       "                mean       std  size\n",
+       "RIAGENDRx                           \n",
+       "Female     29.939946  7.753319  2976\n",
+       "Male       28.778072  6.252568  2759"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "x = da[['BMXBMI', 'RIAGENDRx']].groupby('RIAGENDRx').agg(['mean', 'std', 'size'])\n",
+    "x"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -657,21 +729,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0.14212523289878048, 0.11903716451870151)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.14212522940758335 0.11903715722332033\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "s = x['BMXBMI']['std']['Female']\n",
+    "n = x['BMXBMI']['size']['Female']\n",
+    "semf = s/math.sqrt(n)\n",
+    "\n",
+    "s = x['BMXBMI']['std']['Male']\n",
+    "n = x['BMXBMI']['size']['Male']\n",
+    "semm = s/math.sqrt(n)\n",
+    "print(semf, semm)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -682,10 +760,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.18538992862064455"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dsem = math.sqrt(semf**2 + semm**2)\n",
+    "dsem"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -696,10 +788,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41.52803607359479"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dbm = math.sqrt(x['BMXBMI']['mean']['Female']**2 + x['BMXBMI']['mean']['Male']**2)\n",
+    "dbm"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -710,26 +816,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0.798509725476467, 1.5252382745235278)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7910936830856763 1.5326533975682544\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "cipm = x['BMXBMI']['mean']['Female'] - x['BMXBMI']['mean']['Male']\n",
+    "y = cipm - 2 * dsem\n",
+    "z = cipm + 2 * dsem\n",
+    "print(y,z)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -743,7 +851,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
