--- a/Exercises/Exercise13.ipynb
+++ b/Exercises/Exercise13.ipynb
@@ -17,17 +17,16 @@
     "\n",
     "## Title : Hypothesis Testing Exercise In Python\n",
     "\n",
-    "#### Name: \n",
+    "#### Name: Chong Mun Chen\n",
     "\n",
-    "#### IC Number:\n",
+    "#### IC Number: 960327-07-5097\n",
     "\n",
     "#### Date : 11/7/2023\n",
     "\n",
-    "#### Introduction : \n",
+    "#### Introduction : Practising more on finding the T-statistic and P value to either reject or not reject the null hypothesis.\n",
     "\n",
     "\n",
-    "\n",
-    "#### Conclusion :\n",
+    "#### Conclusion : A greater P value causes us to fail to reject the null hypothesis, while a lesser P value allows us to reject the null hypothesis.\n",
     "\n",
     "\n",
     "\n",
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -913,7 +912,7 @@
        "19                       11.12  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +948,7 @@
        "Name: napping, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +978,7 @@
        "20"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1048,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1071,7 @@
        "Name: night bedtime, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1097,7 @@
        "Name: night bedtime, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1134,7 +1133,7 @@
        "1233.0666666666666"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1159,7 +1158,7 @@
        "1191.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1204,7 +1203,7 @@
        "34.445540177143954"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1224,7 @@
        "34.30014577228499"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1275,7 +1274,7 @@
        "17.77094313065816"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1315,7 @@
        "17.77094313065816"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1345,7 @@
        "19"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1511,7 @@
        "0.029334902861805512"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1569,8 +1568,8 @@
    "source": [
     "from scipy.stats import ttest_ind\n",
     "\n",
-    "no_nap_24 = df[df['napping'] == 0]['24 h sleep duration']\n",
     "nap_24 = df[df['napping'] == 1]['24 h sleep duration']\n",
+    "no_nap_24 = df[df['napping'] == 0]['24 h sleep duration']\n",
     "\n",
     "t_statistics3, p_value3 = ttest_ind(nap_24, no_nap_24, equal_var=True)\n",
     "print(t_statistics3, p_value3)"
@@ -1590,7 +1589,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I fail to reject the null hypothesis because the p_value2 that is 0.0293 is greater than the 𝛼 = 0.025, which means I do not have sufficient evidence to conclude that the difference in average bedtimes for napping versus non napping toddlers is 0"
+    "I fail to reject the null hypothesis because the p_value that is 0.0293 is greater than the 𝛼 = 0.025, which means I do not have sufficient evidence to conclude that the difference in average bedtimes for napping versus non napping toddlers is 0"
    ]
   }
  ],
