added nhanes case study

--- a/Exercises/toddlers_napping_exercise/Case Study - Confidence Intervals (Nap no Nap).ipynb
+++ b/Exercises/toddlers_napping_exercise/Case Study - Confidence Intervals (Nap no Nap).ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,17 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the data\n",
-    "df = pd.read_csv(\"../data_samples/nap_no_nap.csv\") "
+    "df = pd.read_csv(\"../../data_samples/nap_no_nap.csv\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
        "19                       11.12  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
