--- a/Lectures/P38 - Introduction of Decision Tree.ipynb
+++ b/Lectures/P38 - Introduction of Decision Tree.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "#### IC Number:\n",
     "\n",
-    "#### Date :\n",
+    "#### Date : 18/7/2023\n",
     "\n",
     "#### Introduction : \n",
     "\n",
@@ -1029,7 +1029,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1043,7 +1043,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
