--- a/Project/Top Songs on Spotify from 2000 to 2019.ipynb
+++ b/Project/Top Songs on Spotify from 2000 to 2019.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "253c3368",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "8295da07",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "794cb123",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        "4        0.0408          0.001040    0.0845    0.879  172.656           pop  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "b25aae67",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "(2000, 18)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
+   "id": "eceb1b7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['pop', 'rock, pop', 'pop, country', ..., 'hip hop, country', 'pop',\n",
+       "       'hip hop'], dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['genre'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "a29bea73",
    "metadata": {},
    "outputs": [
@@ -327,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "8ecb8748",
    "metadata": {},
    "outputs": [
@@ -355,7 +377,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
