--- a/Exercises/Exercise24.ipynb
+++ b/Exercises/Exercise24.ipynb
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -516,10 +516,10 @@
     {
      "data": {
       "text/plain": [
-       "0.6629213483146067"
+       "0.7359550561797753"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,10 @@
     "titanic_df = pd.read_csv(r'../data_samples2/titanic.csv')\n",
     "\n",
     "# Create feature matrix\n",
-    "X = titanic_df.drop(['Survived', 'Name', 'Sex'], axis=1)\n",
+    "reset = ({'female': 0, 'male': 1})\n",
+    "titanic_df['Sex'] = titanic_df['Sex'].replace(reset)\n",
+    "\n",
+    "X = titanic_df.drop(['Survived', 'Name'], axis=1)\n",
     "y = titanic_df['Survived']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
