--- a/Exercises/Exercise24.ipynb
+++ b/Exercises/Exercise24.ipynb
@@ -17,17 +17,17 @@
     "\n",
     "## Title : Exe24 - Naive Bayes Classification Exercise\n",
     "\n",
-    "#### Name: \n",
+    "#### Name: Chong Mun Chen\n",
     "\n",
-    "#### IC Number:\n",
+    "#### IC Number: 960327-07-5097\n",
     "\n",
     "#### Date : 24/7/2023\n",
     "\n",
-    "#### Introduction : \n",
+    "#### Introduction : Practising on this exercise using Naive Bayes classifier algorithm.\n",
     "\n",
     "\n",
     "\n",
-    "#### Conclusion :\n",
+    "#### Conclusion : Succeeded in training the data with the Naive Bayes classifier algorithm and achieving a decent accuracy score for the prediction model.\n",
     "\n",
     "\n",
     "\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -120,7 +120,7 @@
        "(178, 13)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -288,7 +288,7 @@
        "4                          2.93    735.0  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -357,7 +357,7 @@
        "       1, 2, 2, 2, 1, 1, 1, 0, 0, 1, 2, 0, 0, 0])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -393,7 +393,7 @@
        "1.0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -519,7 +519,7 @@
        "0.7359550561797753"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
