--- a/Exercises/Case Study - Artificial Neural Network using Keras.ipynb
+++ b/Exercises/Case Study - Artificial Neural Network using Keras.ipynb
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1830,7 +1830,7 @@
        "       [0.24565814]], dtype=float32)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1849,23 +1849,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = y_pred.argmax(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'accuracy_score' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[44], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43maccuracy_score\u001b[49m(y_test, y_pred)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'accuracy_score' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.73      1.00      0.84      1530\n",
+      "           1       1.00      0.00      0.00       580\n",
+      "\n",
+      "    accuracy                           0.73      2110\n",
+      "   macro avg       0.86      0.50      0.42      2110\n",
+      "weighted avg       0.80      0.73      0.61      2110\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "accuracy_score(y_test, y_pred)"
+    "from sklearn.metrics import classification_report,confusion_matrix\n",
+    "\n",
+    "print(classification_report(y_test, y_pred, zero_division=1))"
    ]
   },
   {
