renamed ex31 and moved the case studies

--- a/Exercises/customer_ann_keras_exercise/Case Study - Artificial Neural Network using Keras.ipynb
+++ b/Exercises/customer_ann_keras_exercise/Case Study - Artificial Neural Network using Keras.ipynb
@@ -17,17 +17,17 @@
     "\n",
     "## Title : Case Study - Artificial Neural Network using Keras\n",
     "\n",
-    "#### Name: \n",
+    "#### Name: Chong Mun Chen\n",
     "\n",
-    "#### IC Number:\n",
+    "#### IC Number: 960327-07-5097\n",
     "\n",
-    "#### Date :\n",
+    "#### Date : 2/8/2023\n",
     "\n",
-    "#### Introduction : \n",
+    "#### Introduction : Practising with Neural Network learning model on the customer churn and retention dataset using Tensorflow's Keras model.\n",
     "\n",
     "\n",
     "\n",
-    "#### Conclusion :\n",
+    "#### Conclusion : Succeeded in achieving a linear ROC curve with the AUC number.\n",
     "\n",
     "\n",
     "\n",
@@ -63,7 +63,7 @@
     "import numpy as np\n",
     "\n",
     "# load the dataset into the dataframe df\n",
-    "df = pd.read_excel('../data_samples2/WA_Fn-UseC_-Telco-Customer-Churn.xlsx')"
+    "df = pd.read_excel('../../data_samples2/WA_Fn-UseC_-Telco-Customer-Churn.xlsx')"
    ]
   },
   {
